Fix #732: Replace collect(Collectors.toList()) by toList()